# fims

./: .gitignore  LICENSE  README.md
Analysis/: .gitignore  GridPixAnalysis.ipynb  README.md  analysisGUI.py  avalancheAnalysis.ipynb  functionsFIMS.py  gasDataClass.py  magboltzClass.py  polyaClass.py  runDataClass.py  staticAnalysis.ipynb
DataAnalysis/: FIMS_SIM.ipynb  README.md
DataAnalysis/FIMS_SIM/: analysis.ipynb  avalancheAnalysis.ipynb  functions.py  runDataClass.py  staticAnalysis.ipynb
DataFiltering/: README.md
DataGeneration/: README.md  Run.py
DataGeneration/FIMS_Geometry/: CMakeLists.txt  FIMS.sif  FIMS.txt  README.md  Run.py  avalanche.cc  fieldlines.C  mesh.boundary  mesh.header  params.txt
DataGeneration/FIMS_Geometry/Programs/: Elmer  gmsh
DataGeneration/FIMS_Geometry/input_file/: ELMERSOLVER_STARTINFO  FIMS.sif  FIMS.txt  FIMS_Hex.sif  FIMS_Hex.txt  mesh.elements  mesh.nodes  params.txt  runControl.txt
DataGeneration/FIMS_Geometry/output_file/: Field_Too_Small.csv  Sim_Data.csv  Sim_time.txt  driftline.csv
DataGeneration/FIMS_SIM/: .gitignore  CMakeLists.txt  GARFIELDPATH  README.md  Run.py  avalanche.cc  fieldlines.C  runControl  runFIMS.ipynb  run_control
DataGeneration/FIMS_SIM/Geometry/: CMakeLists.txt  FIMS.sif  FIMS.txt
DataGeneration/electronAvalanche/: CMakeLists.txt  README.md  electronAvalanche.cc  run_control  simSingleE.cc
EventReconstruction/: Event_Reconstruction.ipynb  reconstructionClass.py
Simulation/: .gitignore  CMakeLists.txt  README.md  SilenceConsole.h  avalanche.cc  avalancheGridPix.cc  avalancheSurrounding.cc  checkCharge.cc  checkCollection.cc  checkDetection.cc  checkEfficiency.cc  checkGain.cc  checkNetEfficiency.cc  checkTransparency.cc  checkTransparencyGridPix.cc  defineGeometry.ipynb  diffusion.cc  drawFieldLines.cc  fieldlines.cc  gasSimulationClass.py  geometryClass.py  magboltz.cc  myFunctions.cc  myFunctions.h  myFunctions.hh  optimizationClass.py  parallelPlate.cc  parallelPlateClass.py  parallelPlateEfficiency.cc  plotFullField.cc  runControl  runFIMS.ipynb  runFunctions.py  runGridPix.ipynb  simulationClass.py
Simulation/Geometry/: FIMS.sif  FIMS.txt  FIMS6Holes.txt  FIMSCapacitance.sif  FIMSSurrounding.sif  FIMSSurrounding.txt  FIMSSurroundingWeighting.txt  FIMSWeighting.sif  FIMScell.txt  FIMSsurrounding.sif  FIMSsurrounding.txt  FIMSsurroundingWeighting.sif  avalancheSurrounding.cc
Simulation/GridPix/: .gitignore  CMakeLists.txt  avalanche.cc  runGridPix.ipynb
Simulation/GridPix/Geometry/: GridPix.msh  GridPix.sif  GridPix.txt
Simulation/GridPix/Geometry/elmerResults/: entities.sif  gridpix_t0001.vtu  gridpix_t0002.vtu  mesh.boundary  mesh.elements  mesh.header  mesh.names  mesh.nodes
Simulation/garfieldExecutables/: avalanche.cc  avalancheSurrounding.cc  checkEfficiency.cc  parallelPlateEfficiency.cc  plotFullField.cc  testBreakdown.cpp
